Menu e Tela Cadastro

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,8 @@
     "cSpell.words": [
         "Produto",
         "Produtos",
-        "seletor"
-    ]
+        "seletor",
+        "sweetalert"
+    ],
+    "liveServer.settings.port": 5501
 }
