--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,8 +5,10 @@
     "baseUrl": "./",
     "outDir": "./dist/out-tsc",
     "forceConsistentCasingInFileNames": true,
-    "strict": true,
+    //Propriedade adicionada para permitir a declaração
+    //de classes (MODEL) sem construtor
     "strictPropertyInitialization": false,
+    "strict": true,
     "noImplicitOverride": true,
     "noPropertyAccessFromIndexSignature": true,
     "noImplicitReturns": true,
